tests/fail/bad_name_const.rs
/*
 * Copyright (c) 2025 Tomi Leppänen
 * SPDX-License-Identifier: MIT
 */

use sine_macro::sine_wave;

sine_wave! {
    const CONST_WAVE = bad_name();
}

fn main() {}
